Add initial HTML structure for Valentine page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Valentine</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div id="startScreen">
+    <button id="startBtn">Click Here ❤️</button>
+</div>
+
+<div id="mainContent" class="hidden">
+    <h1>Will you be my valentine muchiii? 💖</h1>
+    <button id="yesBtn">YES 💘</button>
+    <button id="noBtn">NO 😢</button>
+
+    <a id="shareBtn" 
+       href="https://wa.me/?text=Will%20you%20be%20my%20valentine%20muchiii%3F%20❤️" 
+       target="_blank">
+       Share on WhatsApp
+    </a>
+</div>
+
+<div class="petals"></div>
+<div class="hearts"></div>
+
+<script src="script.js"></script>
+</body>
+</html>
